# useful_libs

./: README.txt
include/: dbgprint.h  fasta_iterators.h  fileops.h  makestring.h  pfindep.h  procargs.h  scopeguard_plus.h  sequence_lister.h  string_utils.h  timing.h  timing_linux.h  timing_win.h
lib/prebuilt/win32/borland-staticcrt-release/: useful.lib  useful.lst
lib/prebuilt/win32/msvc9-dllcrt-release/: useful.lib  useful.lst
source/: CMakeLists.txt  fileops.c  procargs.c  timing_linux.c  timing_win.c
source/test/: a.out  test_string_utils.cpp
